<resources>
    <string name="app_name">MyNote</string>
    <string name="dialog">Enter your Dialog Here</string>
    <string name="date_modified">The time that this Modified</string>
    <string name="counter">(Counter)</string>
    <string name="category_name">Category Name</string>
    <string name="category_private_name">Category private Name</string>
    <string name="category_successfully_add_dialog">Category Successfully Added to List</string>
    <string name="category_successfully_remove_dialog">Category Successfully Removed from List</string>
    <string name="category_Failure_add_dialog">Category Failure to Added to List</string>
    <string name="note_name">Note Name</string>
    <string name="note_successfully_add_dialog">Note Successfully Added to List</string>
    <string name="note_successfully_remove_dialog">Note Successfully Removed from</string>
    <string name="note_Failure_add_dialog">Note Failure to Added to List</string>
    <string name="ok">OK</string>
    <string name="lock_description">Lock the Category</string>
    <string name="unlock_description">unLock the Category</string>
    <string name="search_description">Search in the Current Page</string>
    <string name="refresh_description">Refresh the Current Page</string>
    <string name="more_description">More Options</string>
    <string name="back_description">Back to Previous Page</string>
    <string name="undo_description">Undo an Action</string>
    <string name="share_description">Share in Social Media</string>
    <string name="CategoryFragment">CategoryFragment</string>
    <string name="NoteFragment">NoteFragment</string>
    <string name="EditNoteFragment">EditNoteFragment</string>
    <string name="note_list">Note List</string>
    <string name="category_list">Category List</string>
    <string name="edit_note_title">Edit Note title</string>
    <string name="note_hint">Enter your Note Here</string>
    <string name="no_note">There is no note available \n Tap on "+" to add new note</string>
    <string name="no_category">There is no category available \n Tap on "+" to add new category</string>
    <string name="add_category">Add a new category</string>
    <string name="add_note">Add a new note</string>
    <string name="theme">Change between light and dark mode</string>
</resources>