<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CategoryFragment">

    <fragment
        android:id="@+id/CategoryFragment"
        android:name="com.example.mynote.ui.category.CategoryFragment"
        android:label="@string/CategoryFragment"
        tools:layout="@layout/fragment_category">

        <action
            android:id="@+id/action_CategoryFragment_to_NoteFragment"
            app:destination="@id/NoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/NoteFragment"
        android:name="com.example.mynote.ui.note.NoteFragment"
        android:label="@string/NoteFragment"
        tools:layout="@layout/fragment_note">

        <action
            android:id="@+id/action_NoteFragment_to_CategoryFragment"
            app:destination="@id/CategoryFragment" />
        <action
            android:id="@+id/action_NoteFragment_to_EditNoteFragment"
            app:destination="@id/EditNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditNoteFragment"
        android:name="com.example.mynote.ui.article.EditNoteFragment"
        android:label="@string/EditNoteFragment"
        tools:layout="@layout/fragment_edit_note">
        <action
            android:id="@+id/action_EditNoteFragment_to_NoteFragment"
            app:destination="@id/NoteFragment" />
    </fragment>

</navigation>